--- a/source/miniMVC/WebContent/WEB-INF/web.xml
+++ b/source/miniMVC/WebContent/WEB-INF/web.xml
@@ -2,15 +2,15 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>miniMVC</display-name>
   <filter>
-    <filter-name>miniStruts</filter-name>
-    <filter-class>cn.jerry.mini_struts.MiniStrutsFilter</filter-class>
+    <filter-name>miniMVC</filter-name>
+    <filter-class>cn.jerry.mini_struts.MiniMVCFilter</filter-class>
     <init-param>
       <param-name>config</param-name>
       <param-value>struts.xml</param-value>
     </init-param>
   </filter>
   <filter-mapping>
-    <filter-name>miniStruts</filter-name>
+    <filter-name>miniMVC</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
   <welcome-file-list>
