--- a/source/miniMVC/WebContent/WEB-INF/web.xml
+++ b/source/miniMVC/WebContent/WEB-INF/web.xml
@@ -6,7 +6,11 @@
     <filter-class>cn.jerry.mini_mvc.MiniMVCFilter</filter-class>
     <init-param>
       <param-name>config</param-name>
-      <param-value>struts.xml</param-value>
+      <param-value>mini-mvc.xml</param-value>
+    </init-param>
+    <init-param>
+      <param-name>bean-config</param-name>
+      <param-value>mini-mvc-beans.xml</param-value>
     </init-param>
   </filter>
   <filter-mapping>
